# xxhash-cpp

./: CMakeLists.txt  README.md
src/: BenchContainer.h  Benchmark.cpp  Benchmark.h  main.cpp
src/test/: XXHash32Test.cpp  XXHash64Test.cpp
src/xxhash/: XXHash32.cpp  XXHash32.h  XXHash64.cpp  XXHash64.h
